Fix image overflow.
Rezise & Optimize fairphone.jpg.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -129,6 +129,7 @@ p > img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
 }
 
 /* Footer */
